        # A new setting value "POPULATORS" has been added ; it allows to
          override the classes used by the command "creme_populate".
          Many classes 'Populate' have been reworked to facilitate their modification by inheritance ;
          the work has been split into several methods, and class attributes with declarative values have been added.
        # The class 'creme_core.models.UserRole' has 2 new fields: uuid & extra_data (a JSONField which can be used to store whatever you want).
        # In 'creme_core.views' :
            - The views which manage Bricks now display a minimal Brick (see 'creme_core.gui.bricks.ForbiddenBrick')
              which contains an error message when the attribute 'Brick.permissions' does not pass the validation.
              This attribute has been set for many Brick classes in order to use this new behaviour.
            - The class-view 'views.entity.EntityDeletion' now accepts explicit callback URL.
        # In the class 'creme_core.core.setting_key.SettingKey', you can now pass :
             - a custom form-field class.
             - a custom renderer function.
        # In 'creme_core.gui' :
            - In the class 'bricks._BrickRegistry', 3 methods to unregister brick classes have been added.
            - In 'button_menu' :
                - The classes inheriting 'Button' can now define an attribute "dependencies" (like Brick classes) to have a dynamic reloading;
                  their template can now use the actions available to Bricks.
                - In the class 'ButtonsRegistry' :
                    - A method 'unregister()' has been added.
                    - A button class can now be registered as mandatory, to be always displayed without
                      having to hard code them in the detail-view template.
            - A method 'bulk_update.FieldOverrider.post_save_instance()' has been added